<resources>
    <string name="main_ui_lbl_title">Serval Mesh Sampler</string>
    <string name="main_ui_lbl_subtitle">Use the buttons below to explore the functionality of the Serval Mesh APIs.\n\nScroll down to see all of the buttons</string>
    <string name="main_ui_lbl_mesh_installed">Serval Mesh Installed?</string>
    <string name="main_ui_lbl_sid_did">Get Serval DID &amp; SID</string>
    <string name="main_ui_lbl_state_change">Listen for State Changes</string>
    <string name="main_ui_lbl_state_check">Check Serval Mesh State</string>
    <string name="main_ui_lbl_start_stop">Start / Stop Serval Mesh</string>
    <string name="main_ui_lbl_send_meshms">Send a MeshMS</string>
    <string name="main_ui_lbl_receive_meshms">Receive a MeshMS</string>
    <string name="main_ui_lbl_rhizome_add_file">Add File to Rhizome</string>
    <string name="main_ui_lbl_rhizome_receive_file">Receive File from Rhizome</string>
    <string name="main_ui_btn_try_it">Try It</string>
    <string name="serval_installed_ui_lbl_title">Is Serval Mesh Installed?</string>
    <string name="serval_installed_ui_lbl_subtitle">Use the code in this activity to check if the Serval Mesh software is installed</string>
    <string name="serval_installed_ui_img_serval_cat">Serval Project Cat Logo</string>
    <string name="serval_installed_ui_lbl_status_yes">Serval Mesh Software is Installed</string>
    <string name="serval_installed_ui_lbl_status_no">Serval Mesh Software is Not Installed</string>
    <string name="serval_did_sid_ui_lbl_title">Serval Mesh DID and SID</string>
    <string name="serval_did_sid_ui_lbl_subtitle">Use a broadcast receiver to retrieve the DID (phone number) and SID (subscriber id) that the Serval Mesh software is using</string>
    <string name="serval_did_sid_ui_lbl_did">Serval DID: </string>
    <string name="serval_did_sid_ui_lbl_sid">Serval SID: </string>
    <string name="serval_did_sid_intent_action">org.servalproject.SET_PRIMARY</string>
    <string name="serval_did_sid_intent_did">serval-did</string>
    <string name="serval_did_sid_intent_sid">serval-sid</string>
    <string name="state_changed_ui_lbl_title">Serval State Changes</string>
    <string name="state_changed_ui_lbl_subtitle">Use a broadcast receiver to receive notifications about when the state of the Serval Mesh software changes</string>
    <string name="state_changed_ui_lbl_start">Start Receiving</string>
    <string name="state_changed_ui_lbl_stop">Stop Receiving</string>
    <string name="state_changed_ui_lbl_state">Current State: </string>
    <string name="state_changed_intent_extra">state-value</string>
    <string name="state_check_ui_lbl_title">Serval State Check</string>
    <string name="state_check_ui_lbl_subtitle">Use an intent and broadcast receiver to check on the status of the Serval Mesh software</string>
    <string name="state_check_ui_lbl_check">Check Status</string>
    <string name="state_check_ui_btn_check">Fire Intent</string>
    <string name="state_check_ui_lbl_state">Current State: </string>
    <string name="state_check_intent_extra">state-value</string>
    <string name="start_stop_ui_lbl_title">Start / Stop Serval Mesh</string>
    <string name="start_stop_ui_lbl_subtitle">Starting and stopping the Serval Mesh requires that an application uses the "org.servalproject.START_STOP" permission and be compiled with the same key as that used to compile the Serval Mesh application</string>
    <string name="start_stop_ui_lbl_start">Start Serval</string>
    <string name="start_stop_ui_lbl_stop">Stop Serval</string>
    <string name="send_meshms_ui_lbl_title">Send a Serval MeshMS</string>
    <string name="send_meshms_ui_lbl_subtitle">Sending a Serval MeshMS requires that an application uses the "org.servalproject.meshms.SEND_MESHMS" permission.</string>
    <string name="send_meshms_ui_lbl_phone_no">Phone Number: </string>
    <string name="send_meshms_ui_lbl_content">Content: </string>
    <string name="send_meshms_ui_btn_send">Send Message</string>
    <string name="send_meshms_toast_no_phone">The phone number is missing</string>
    <string name="send_meshms_toast_phone_not_digits">The phone number must contain only digits</string>
    <string name="send_meshms_toast_no_content">The content of the message is missing</string>
    <string name="send_meshms_toast_content_length">The content of the message must be below %1$s characters</string>
    <string name="send_meshms_toast_sent">Message has been sent to Serval Mesh for processing</string>
    <string name="receive_meshms_ui_lbl_title">Receive a Serval MeshMS</string>
    <string name="receive_meshms_ui_lbl_subtitle">Listening for and receiving new Serval MeshMS messages requires that an application uses the "org.servalproject.meshms.RECEIVE_MESHMS" permission.</string>
    <string name="receive_meshms_ui_lbl_start">Start listening: </string>
    <string name="receive_meshms_ui_lbl_stop">Stop listening: </string>
    <string name="receive_meshms_ui_lbl_msg_details">New Message Details</string>
    <string name="receive_meshms_ui_lbl_time">Received: </string>
    <string name="receive_meshms_ui_lbl_from">From: </string>
    <string name="receive_meshms_ui_lbl_content">Content: </string>
    <string name="receive_meshms_intent_time">time</string>
    <string name="receive_meshms_intent_from">from</string>
    <string name="receive_meshms_intent_content">content</string>
    <string name="rhizome_add_file_ui_lbl_title">Share File via Rhizome</string>
    <string name="rhizome_add_file_ui_lbl_subtitle">An application that wishes to share a file via Rhizome on a Serval Mesh is required to use the "org.servalproject.rhizome.ADD_FILE" permission.\n\nYou need to manually delete the test files that this activity creates</string>
    <string name="rhizome_add_file_ui_lbl_share">Shared File: </string>
    <string name="rhizome_add_file_ui_btn_share">Share</string>
    <string name="rhizome_add_file_ui_lbl_path">File Path: </string>
    <string name="rhizome_add_file_name">serval-mesh-sampler-%1$d.txt</string>
    <string name="rhizome_add_file_toast_copy_fail">Unable to create the sample file on the external storage, check logcat for details.</string>
    <string name="rhizome_add_file_content_header"># Sample file created by the Serval Mesh Sampler application for testing the Rhizome functionality of the Serval Mesh software.</string>
    <string name="rhizome_add_file_content_subheader"># File Created: %1$d</string>
    <string name="rhizome_add_file_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean at consequat turpis. Integer consectetur est nec sapien egestas vel egestas velit dictum. Sed a justo mi, vitae mattis leo. In at felis quis arcu viverra tincidunt. Duis accumsan, neque non vulputate pellentesque, metus magna ornare lectus, eget hendrerit leo nulla non augue. Integer dapibus faucibus orci sit amet tempor. Donec nisi diam, faucibus vehicula suscipit nec, bibendum non risus. Etiam pellentesque, lacus eget porta adipiscing, risus ligula sollicitudin leo, et suscipit velit sem nec erat. Morbi interdum aliquam purus eu tincidunt. Nulla dapibus facilisis nulla. Aenean tristique porttitor mauris ac feugiat. Sed velit diam, ullamcorper posuere feugiat sed, commodo sit amet tortor. Donec tristique libero nec diam porta sodales.</string>
    <string name="rhizome_add_file_toast_copy_success">The \'%1$s\' file has been added to Rhizome</string>
    <string name="rhizome_receive_file_ui_lbl_title">Recieve a File from Rhizome</string>
    <string name="rhizome_receive_file_ui_lbl_subtitle">An application that wishes to receive notification of a new file from Rhizome on a Serval Mesh is reqiured to use the "org.servalproject.rhizome.RECEIVE_FILE" permission.</string>
    <string name="rhizome_receive_file_ui_lbl_start">Start listening: </string>
    <string name="rhizome_receive_file_ui_lbl_stop">Stop listening: </string>
    <string name="rhizome_receive_ui_lbl_file_details">File Details</string>
    <string name="rhizome_receive_file_ui_lbl_name">Name: </string>
    <string name="rhizome_receive_file_ui_lbl_version">File Version: </string>
    <string name="rhizome_receive_file_ui_lbl_date">Date: </string>
    <string name="rhizome_receive_file_ui_lbl_content">Content: </string>
    <string name="misc_ui_btn_start">Start</string>
    <string name="misc_ui_btn_stop">Stop</string>
    <string name="state_power_on">Serval Mesh is ON</string>
    <string name="state_power_off">Serval Mesh is OFF</string>
    <string name="state_installing">Installing&#8230;</string>
    <string name="state_upgrading">Upgrading&#8230;</string>
    <string name="state_starting">Starting&#8230;</string>
    <string name="state_stopping">Stopping&#8230;</string>
    <string name="state_broken">Broken!</string>
    <string name="misc_ui_btn_back">Back to Main Screen</string>
    <string name="misc_value_missing">Expected Value Missing</string>
    <string name="misc_intent_no_data">Expected Value Missing from Intent</string>
    <string name="system_app_name">Serval Mesh Sampler</string>
    <string name="system_serval_mesh_package_name">org.servalproject</string>
    <string name="system_serval_mesh_sid_did_broadcast">org.servalproject.SET_PRIMARY</string>
    <string name="system_serval_mesh_state_change">org.servalproject.ACTION_STATE</string>
	<string name="system_serval_mesh_state_check">org.servalproject.ACTION_STATE_CHECK</string>
	<string name="system_serval_mesh_state_check_reply">org.servalproject.ACTION_STATE_CHECK_UPDATE</string>
	<string name="system_serval_mesh_start_action">org.servalproject.ACTION_START_SERVAL</string>
	<string name="system_serval_mesh_stop_action">org.servalproject.ACTION_STOP_SERVAL</string>
	<string name="system_serval_meshms_send_action">org.servalproject.meshms.SEND_MESHMS</string>
	<string name="system_serval_mesh_receive_action">org.servalproject.meshms.RECEIVE_MESHMS</string>
	<string name="system_serval_meshms_extra_name">simple</string>
	<string name="system_serval_rhizome_add_file_action">org.servalproject.rhizome.ADD_FILE</string>
	<string name="system_serval_rhizome_receive_file_action">org.servalproject.rhizome.RECIEVE_FILE</string>
	<string name="system_serval_rhizome_intent_path_extra">path</string>
	<string name="system_serval_rhizome_intent_version_extra">version</string>
	<string name="system_serval_rhizome_intent_author_extra">author</string>
</resources>