<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FF000000">

	<TextView android:id="@+id/rhizome_receive_file_ui_lbl_title"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/rhizome_receive_file_ui_lbl_title"
		android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		android:layout_marginLeft="@dimen/ui_elem_margin_left"
		android:layout_marginRight="@dimen/ui_elem_margin_right"
		android:gravity="center_vertical|center_horizontal"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView android:id="@+id/rhizome_receive_file_ui_lbl_subtitle"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/rhizome_receive_file_ui_lbl_subtitle"
		android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		android:layout_marginLeft="@dimen/ui_elem_margin_left"
		android:layout_marginRight="@dimen/ui_elem_margin_right"
		android:gravity="center_vertical|center_horizontal" />
	
	<TableLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TableRow android:id="@+id/rhizome_receive_file_ui_tbl_row_1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">

			<TextView android:id="@+id/rhizome_receive_file_ui_lbl_start"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:text="@string/rhizome_receive_file_ui_lbl_start"
				android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
				android:layout_marginLeft="@dimen/ui_elem_margin_left"
				android:layout_marginRight="@dimen/ui_elem_margin_right" />

			<Button android:id="@+id/rhizome_receive_file_ui_btn_start"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
				android:layout_marginLeft="@dimen/ui_elem_margin_left"
				android:layout_marginRight="@dimen/ui_elem_margin_right" 
				android:text="@string/misc_ui_btn_start" />

		</TableRow>
		
		<TableRow android:id="@+id/rhizome_receive_file_ui_tbl_row_2"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content">

			<TextView android:id="@+id/rhizome_receive_file_ui_lbl_stop"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:text="@string/rhizome_receive_file_ui_lbl_stop"
				android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
				android:layout_marginLeft="@dimen/ui_elem_margin_left"
				android:layout_marginRight="@dimen/ui_elem_margin_right" />

			<Button android:id="@+id/rhizome_receive_file_ui_btn_stop"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
				android:layout_marginLeft="@dimen/ui_elem_margin_left"
				android:layout_marginRight="@dimen/ui_elem_margin_right" 
				android:text="@string/misc_ui_btn_stop" />

		</TableRow>
		
	</TableLayout>
	
	<TextView android:id="@+id/rhizome_receive_ui_lbl_file_details"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:text="@string/rhizome_receive_ui_lbl_file_details"
			android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
			android:layout_marginLeft="@dimen/ui_elem_margin_left"
			android:layout_marginRight="@dimen/ui_elem_margin_right"
			android:gravity="center_horizontal" />
	
	<ScrollView
        android:id="@+id/rhizome_receive_file_ui_scroll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	
		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
	
			<TableRow android:id="@+id/rhizome_receive_file_ui_tbl_row_3"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_path"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:text="@string/rhizome_receive_file_ui_lbl_path"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
			    
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_path_value"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
				
			</TableRow>
			
			<TableRow android:id="@+id/rhizome_receive_file_ui_tbl_row_4"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_version"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:text="@string/rhizome_receive_file_ui_lbl_version"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
			    
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_version_value"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
				
			</TableRow>
			
			<TableRow android:id="@+id/rhizome_receive_file_ui_tbl_row_5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_author"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:text="@string/rhizome_receive_file_ui_lbl_author"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
			    
			    <TextView android:id="@+id/rhizome_receive_file_ui_lbl_author_value"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
					android:layout_marginLeft="@dimen/ui_elem_margin_left"
					android:layout_marginRight="@dimen/ui_elem_margin_right" />
				
			</TableRow>
			
		</TableLayout>
	</ScrollView>
	
</LinearLayout>