<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 The Serval Project
 *
 * This file is part of the Serval Mesh Sampler
 *
 * Serval Mesh Sampler is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 *
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#000000" >
    
    <TextView
        android:id="@+id/state_changed_ui_lbl_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_changed_ui_lbl_title"
        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
        android:layout_marginLeft="@dimen/ui_elem_margin_left"
        android:layout_marginRight="@dimen/ui_elem_margin_right"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/state_changed_ui_lbl_subtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_changed_ui_lbl_subtitle"
        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
        android:layout_marginLeft="@dimen/ui_elem_margin_left"
        android:layout_marginRight="@dimen/ui_elem_margin_right"
        android:gravity="center_vertical|center_horizontal"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/state_changed_ui_tbl_row_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/state_changed_ui_lbl_start"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/state_changed_ui_lbl_start"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"/>
            
            <Button
		        android:id="@+id/state_changed_ui_btn_start"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"
		        android:text="@string/state_changed_ui_btn_start" />
            
        </TableRow>

        <TableRow
            android:id="@+id/state_changed_ui_tbl_row_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/state_changed_ui_lbl_top"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/state_changed_ui_lbl_stop"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"/>
            
            <Button
		        android:id="@+id/state_changed_ui_btn_stop"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"
		        android:text="@string/state_changed_ui_btn_stop" />
        </TableRow>
        
        <TableRow
            android:id="@+id/state_changed_ui_tbl_row_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
		        android:id="@+id/state_changed_ui_lbl_state"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/state_changed_ui_lbl_state"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"/>
            
            <TextView
		        android:id="@+id/state_changed_ui_lbl_state_value"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
		        android:layout_marginLeft="@dimen/ui_elem_margin_left"
		        android:layout_marginRight="@dimen/ui_elem_margin_right"/>
            
            
        </TableRow>

    </TableLayout>
    
    <Button
        android:id="@+id/state_changed_ui_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_elem_margin_bottom"
        android:layout_marginLeft="@dimen/ui_elem_margin_left"
        android:layout_marginRight="@dimen/ui_elem_margin_right"
        android:text="@string/misc_ui_btn_back" />

</LinearLayout>